--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,11 +2,14 @@
 nodaemon=true
 
 [program:mysql]
-command=/usr/bin/mysqld_safe
+command=/usr/bin/mysqld_safe --init-file=/docker-entrypoint-initdb.d/1.sql
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/mysql.err.log
-stdout_logfile=/var/log/mysql.out.log
+stderr_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+environment=MYSQL_USER="dev",MYSQL_PASSWORD="dev",MYSQL_DATABASE="dev",TZ="America/New_York"
 
 [program:backend]
 command=/bin/bash /opt/app/backend/start_backend.sh
